force-app/main/default/objects/Study_Plan_Unit_Requirement__c/Study_Plan_Unit_Requirement__c.object-meta.xml
<CustomObject>
    <description>The requirement for a unit of study for a study plan.</description>
    <label>Study Plan Unit Requirement</label>
    <nameField>
        <label>Study Plan Unit Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Plan Unit Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>