force-app/main/default/objects/Study_Plan_Unit_Requirement__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Requirement_Type</valueSetName>
    </valueSet>
</CustomField>