force-app/main/default/objects/Study_Plan_Unit_Requirement__c/fields/Study_Plan_Unit__c.field-meta.xml
<CustomField>
    <fullName>Study_Plan_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Plan Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Plan_Structure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Unit</value>
        </filterItems>
        <infoMessage>Please select a unit study plan structure.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Plan_Structure__c</referenceTo>
    <relationshipLabel>Study Plan Unit Requirements</relationshipLabel>
    <relationshipName>Study_Plan_Unit_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>